# roboreason

./: .gitignore  README.md  pyproject.toml
lerobot_examples/: README.md
model_outputs/combined/lerobot/jackvial_so101_pickplace_recap_merged_v2/: jackvial_so101_pickplace_recap_merged_v2_episode_0.json  jackvial_so101_pickplace_recap_merged_v2_episode_1.json  jackvial_so101_pickplace_recap_merged_v2_episode_10.json  jackvial_so101_pickplace_recap_merged_v2_episode_11.json  jackvial_so101_pickplace_recap_merged_v2_episode_12.json  jackvial_so101_pickplace_recap_merged_v2_episode_13.json  jackvial_so101_pickplace_recap_merged_v2_episode_14.json  jackvial_so101_pickplace_recap_merged_v2_episode_15.json  jackvial_so101_pickplace_recap_merged_v2_episode_16.json  jackvial_so101_pickplace_recap_merged_v2_episode_17.json  jackvial_so101_pickplace_recap_merged_v2_episode_18.json  jackvial_so101_pickplace_recap_merged_v2_episode_19.json  jackvial_so101_pickplace_recap_merged_v2_episode_2.json  jackvial_so101_pickplace_recap_merged_v2_episode_20.json  jackvial_so101_pickplace_recap_merged_v2_episode_21.json  jackvial_so101_pickplace_recap_merged_v2_episode_22.json  jackvial_so101_pickplace_recap_merged_v2_episode_23.json  jackvial_so101_pickplace_recap_merged_v2_episode_24.json  jackvial_so101_pickplace_recap_merged_v2_episode_25.json  jackvial_so101_pickplace_recap_merged_v2_episode_26.json  jackvial_so101_pickplace_recap_merged_v2_episode_27.json  jackvial_so101_pickplace_recap_merged_v2_episode_28.json  jackvial_so101_pickplace_recap_merged_v2_episode_29.json  jackvial_so101_pickplace_recap_merged_v2_episode_3.json  jackvial_so101_pickplace_recap_merged_v2_episode_30.json  jackvial_so101_pickplace_recap_merged_v2_episode_31.json  (+14 more)
roboreason/: =1.4.0  =2.3.0  __init__.py  api_models.py  core.py  roboreward.py  run_sole.py  sole.py  topreward.py
roboreason.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
roboreason/robometer/: FINETUNE_ROBOMETER.md  README.md  requirements-robodopamine.txt  roboreason_robometer.py  setup.py  train.py
roboreason/robometer/dataset_upload/: README.md  generate_hf_dataset.py  helpers.py  validate_dataset.py  video_helpers.py  visualize_dataset.py
roboreason/robometer/eval_commands/: reward_alignment.sh
roboreason/robometer/scripts/: count_trajectories.py  download_data.sh  download_processed_datasets.sh  example_inference.py  example_inference_local.py  example_libero_robometer_wrapper.py  robotics_demo_video_scraper.py  untar_processed_datasets.sh
roboreason/utils/: model_utils.py
(+361 files in other folders)
